<resources>
    <string name="app_name">SimpleAlarm</string>
    <string name="one_time_alarm">One Time Alarm</string>
    <string name="alarm_date">Alarm Date</string>
    <string name="alarm_time">Alarm Time</string>
    <string name="alarm_message">Alarm Message</string>
    <string name="set_one_time_alarm">Set One Time Alarm</string>


    <string name="repeating_alarm">Repeating Alarm</string>
    <string name="cancel_alarm">Cancel Alarm</string>
    <string name="set_repeating_alarm">Set Repeating Alarm</string>
</resources>
